# SocialStack-1

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_openai.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_prd_schema_alignment.py  c3d4e5f6a7b8_add_slot_theme_objective.py  e5536a2bdbb0_initial_schema.py  fd1478f5b0f4_initial_schema.py
docs/: DEVELOPMENT_PLAN.md
frontend/: index.html
src/socialstack/: app.py  celery_app.py  config.py  dependencies.py  main.py
src/socialstack/ai/: anthropic_provider.py  client.py  google_provider.py  openai_provider.py
src/socialstack/db/: base.py  session.py
src/socialstack/middleware/: auth.py  logging.py
src/socialstack/platform_rules/: rules.py
src/socialstack/prompts/: brief_prompt.py  calendar_prompt.py  caption_prompt.py  image_prompt.py  multi_variant_prompt.py  regen_prompt.py
src/socialstack/publishers/: base.py  facebook.py  instagram.py  linkedin.py  twitter.py
src/socialstack/repositories/: base.py  business_repo.py  calendar_repo.py  content_repo.py  dm_repo.py  media_repo.py  (+5 more)
tests/: conftest.py
tests/e2e/: test_api_endpoints.py
tests/integration/: test_generation_flow.py  test_metrics_flow.py  test_publish_flow.py  test_regen_flow.py
workflows_new/: README.md  WF-ASSET_Image_Generator.json  WF-BRIEF_Content_Brief_Generator.json  WF-CAL_Calendar_Theme_Generator.json  WF-CAPTION_Platform_Caption_Generator.json  WF-ERROR_Error_Handler.json  WF-GENORCH_Generation_Orchestrator.json  WF-METRICS_Metrics_Collector.json  WF-MVAR_Multi_Variant_Generator.json  WF-NOTIFY_Notification_Workflow.json  WF-PUBLISH_Platform_Publisher.json  WF-PUBORCH_Publish_Orchestrator.json  WF-REGEN_Regeneration_Workflow.json
(+70 files in other folders)
