[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialstack"
version = "0.1.0"
description = "Standalone social media content automation product"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Async task queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",
    "flower>=2.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Pydantic / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # HTTP client
    "httpx>=0.28.0",
    # AI
    "openai>=1.57.0",
    "google-generativeai>=0.8.0",
    # Retry
    "tenacity>=9.0.0",
    # Redis client (for caching)
    "redis[hiredis]>=5.2.0",
    # Logging
    "structlog>=24.4.0",
    # Token encryption
    "cryptography>=44.0.0",
    # JWT verification
    "python-jose[cryptography]>=3.3.0",
    # Storage
    "boto3>=1.35.0",
    # Utils
    "python-multipart>=0.0.12",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/socialstack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
